revise the about html file

--- a/final assessment/src/about.html
+++ b/final assessment/src/about.html
@@ -71,7 +71,7 @@
         <h2>Honest Statement</h2>
         <p>
           [Gyeongrok Oh]<br />
-          Date: [Current Date]
+          Date: [AUG 8, 2023]
           <br />
           I declare that my assessment is wholly my own work in accordance with Seneca Academic
           Policy.<br />
